--- a/Inverted Racer/index.html
+++ b/Inverted Racer/index.html
@@ -10,7 +10,7 @@
     <script src='Preloader.js'></script>
     <script src='StartMenu.js'></script>
     <script src='Game.js'></script>
-    <script src='Instructions.js'></script>
+    <!--<script src='Instructions.js'></script>-->
     <style type="text/css">
         body {
             margin: 0;
@@ -28,7 +28,7 @@
         game.state.add('Preloader', invertedRacer.Preloader);
         game.state.add('StartMenu', invertedRacer.StartMenu);
         game.state.add('Game', invertedRacer.Game);
-        game.state.add('Instructions', invertedRacer.Instructions);
+        //game.state.add('Instructions', invertedRacer.Instructions);
         game.state.start('Boot');
     }
 
